--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ span {
 h1, h2, h3, h4, h5 {
     font-weight: 500;
     color: #607d8b;
-    line-height: 1.5;
+    line-height: 2;
 }
 
 .progress-list div {
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5 {
 .info-list, .progress-list{
     list-style: none;
     padding-left: 0px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 2;
 }
 
@@ -89,7 +89,8 @@ hr {
 }
 
 .info-unit {
-    color: #666;
+    /*color: #666;*/
+    color: #F0FFFF
     margin-bottom: 20px;
 }
 
@@ -122,9 +123,9 @@ hr {
 
 
 body {
-    background-color: lightslategray;
+    background-color:  	#2F4F4F;
     font-family: sans-serif, Microsoft Yahei, Helvetica Neue;
-    zoom: 80%;
+    zoom: 90%;
 }
 
 footer {
@@ -207,7 +208,7 @@ progress::-moz-progress-value {
     margin: 0 auto;
 
     width: 1050px;
-    height: 1550px;
+    height: 1400px;
     background-color: white;
 
 }
